@@ -412,7 +412,11 @@ tmp()
 	envtmp = getenv("TMPDIR");
 	if (envtmp && strlen(envtmp) + strlen("/bt.XXXXXX") >= sizeof(path))
 		return -1;
+#ifdef HAVE_SNPRINTF
 	(void)snprintf(path, sizeof(path), "%s/bt.XXXXXX", envtmp ? envtmp : "/tmp");
+#else
+	(void)sprintf(path, "%s/bt.XXXXXX", envtmp ? envtmp : "/tmp");
+#endif /* HAVE_SNPRINTF */
 
 #ifndef _WIN32
 	(void)sigfillset(&set);
